[gd_scene load_steps=3 format=3 uid="uid://8loeelhf8y7q"]

[ext_resource type="Theme" uid="uid://bdanof2i81six" path="res://resources/theme_main.tres" id="1_qbc5j"]
[ext_resource type="Script" path="res://scenes/GUI/credits_menu.gd" id="2_57rre"]

[node name="CreditsMenu" type="Control" node_paths=PackedStringArray("first_element_to_focus")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qbc5j")
script = ExtResource("2_57rre")
first_element_to_focus = NodePath("Panel/BackButton")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 74.0
offset_right = 120.0
offset_bottom = 148.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 70
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 242.0
offset_bottom = -256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="BeeperFontLink" type="LinkButton" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../BackButton")
focus_neighbor_top = NodePath("../../BackButton")
focus_neighbor_right = NodePath("../FunnyCartoonLink")
focus_neighbor_bottom = NodePath("../FunnyCartoonLink")
focus_next = NodePath("../FunnyCartoonLink")
focus_previous = NodePath("../../BackButton")
focus_mode = 2
text = "Beeper Font"
uri = "https://www.fontspace.com/beeper-font-f7374"

[node name="FunnyCartoonLink" type="LinkButton" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../BeeperFontLink")
focus_neighbor_top = NodePath("../BeeperFontLink")
focus_neighbor_right = NodePath("../EightBitCoinLink")
focus_neighbor_bottom = NodePath("../EightBitCoinLink")
focus_next = NodePath("../EightBitCoinLink")
focus_previous = NodePath("../BeeperFontLink")
focus_mode = 2
text = "Funny Cartoon Sound Effects"
uri = "https://youtube.com/watch?v=VmgKryu4__k"

[node name="EightBitCoinLink" type="LinkButton" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../FunnyCartoonLink")
focus_neighbor_top = NodePath("../FunnyCartoonLink")
focus_neighbor_right = NodePath("../BlueGrassLink")
focus_neighbor_bottom = NodePath("../BlueGrassLink")
focus_next = NodePath("../BlueGrassLink")
focus_previous = NodePath("../FunnyCartoonLink")
focus_mode = 2
text = "8-Bit Coin Sound Effect"
uri = "https://youtube.com/watch?v=5v20ztxGvQ0"

[node name="BlueGrassLink" type="LinkButton" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../EightBitCoinLink")
focus_neighbor_top = NodePath("../EightBitCoinLink")
focus_neighbor_right = NodePath("../PrayAndHopeLink")
focus_neighbor_bottom = NodePath("../PrayAndHopeLink")
focus_next = NodePath("../PrayAndHopeLink")
focus_previous = NodePath("../EightBitCoinLink")
focus_mode = 2
text = "Blue Gras In Hillbilly Country"
uri = "https://youtube.com/watch?v=EIzfOQTRxc0"

[node name="PrayAndHopeLink" type="LinkButton" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../BlueGrassLink")
focus_neighbor_top = NodePath("../BlueGrassLink")
focus_neighbor_right = NodePath("../../BackButton")
focus_neighbor_bottom = NodePath("../../BackButton")
focus_next = NodePath("../../BackButton")
focus_previous = NodePath("../BlueGrassLink")
focus_mode = 2
text = "Pray & Hope no copyright slow bluegrass"
uri = "https://youtube.com/watch?v=LtKKO0LEweU"

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -172.0
offset_right = 228.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_left = NodePath("../VBoxContainer/PrayAndHopeLink")
focus_neighbor_top = NodePath("../VBoxContainer/PrayAndHopeLink")
focus_neighbor_right = NodePath("../VBoxContainer/BeeperFontLink")
focus_neighbor_bottom = NodePath("../VBoxContainer/BeeperFontLink")
focus_next = NodePath("../VBoxContainer/BeeperFontLink")
focus_previous = NodePath("../VBoxContainer/PrayAndHopeLink")
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
